fix-readable

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,9 @@
 
 .card {
 	/* Add your styles here */
-	background: blur(10px) rgba(255, 255, 255, 0.8);
+	background: blur(10px) rgb(255, 255, 255);
 	backdrop-filter: blur(5px);
+	background-color: rgba(49, 71, 143, 0.301);
 	border: 5px solid rgba(255, 255, 255, 0.2);
 	border-radius: 5px;
 	min-width: 200px;
@@ -24,7 +25,24 @@
 	align-items: center;
 	gap: 10px;
 }
-
+.title {
+	font-size: 36px;
+	font-family: 'Times New Roman', Times, serif;
+	font-weight: 900;
+	color: #ccc;
+	text-shadow: 3px 3px 3px #000000ef;
+}
 .card__body {
 	/* Add your styles here */
+}
+@media screen and (max-width: 768px) {
+	.container {
+		min-height: 100vh;
+	}
+	.card {
+		width: 90%;
+	}
+	.title {
+	font-size: 32px;
+}
 }
