--- a/src/componets/WeatherInfo.css
+++ b/src/componets/WeatherInfo.css
@@ -3,6 +3,9 @@
 }
 .card__title {
 	font-size: 30px;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 800;
+  color: #000000;
 }
 .card_spam {
 	font-family:'Courier New', Courier, monospace;
